# 2026GKD_week6

./: CMakeLists.txt  README.md  test.cpp  test.h  trie.cpp  trie.h
